style.css
:root {
  --bistre: #382210;
  --smoky-black: #0f0704;
  --walnut-brown: #6b6454;
  --kobicha: #613e22;
  --cornsilk: #fcf0cf;
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
}

body {
  font-family: sans-serif;
  color: var(--cornsilk);
  font-size: 1.1em;
  display: flex;
  flex-direction: column;
}

header {
  background: var(--kobicha);
  padding: 10px 30px;
  border-bottom: 1px solid var(--cornsilk);
}

header img {
  float: right;
  width: auto;
  height: 48px;
  margin-top: 29px;
}

main {
  flex: 1;
  background: url("/arx-bg-image.webp") no-repeat center center var(--walnut-brown);
  background-size: cover;
}
main > div {
  width: 800px;
  margin: 0 auto;
}

footer {
  background: var(--kobicha);
  padding: 10px 30px;
  border-top: 1px solid var(--cornsilk);
  font-size: 0.8rem;
}

h1,
h2 {
  margin: 0;
  font-family: serif;
}

h1,
h2 {
  margin-top: 30px;
  margin-bottom: 20px;
}

a {
  text-decoration: none;
  font-weight: bold;
  color: var(--smoky-black);
}
a:hover {
  text-decoration: underline;
}

code {
  background: lightgrey;
  padding: 0 1px;
  border-radius: 3px;
}

img {
  width: 100%;
  user-select: none;
}

figure {
  margin: 0 0 20px 0;
}

figure figcaption {
  text-align: center;
  font-style: italic;
}

.breadcrumbs {
  font-size: 0.8rem;
  user-select: none;
}
.breadcrumbs ul {
  margin: 0;
  padding: 0;
  display: inline-block;
  font-size: 0;
}
.breadcrumbs ul li {
  list-style: none;
  display: inline-block;
  font-size: 0.8rem;
  font-weight: bold;
}
.breadcrumbs ul li::before {
  content: "/";
  margin: 0 5px;
}
.breadcrumbs ul li:first-child::before {
  content: none;
}

main > div > ul {
  padding: 0;
  margin: 40px 0;
}
main > div > ul li {
  margin-bottom: 30px;
  list-style: none;
}
main > div > ul li span {
  display: block;
}

main p {
  margin-top: -10px;
}

em > a {
  font-weight: normal;
}

.gallery {
  margin: 20px 0;
}
.gallery ul {
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.gallery ul li {
  width: calc(100% / 3 - 10px);
  list-style: none;
  margin: 0 0 10px 0;
  padding: 0;
}
.gallery a {
  display: block;
  padding: 2px;
  background: var(--cornsilk);
  box-sizing: border-box;
  border-radius: 2px;
}
.gallery a:hover {
  background: var(--kobicha);
  color: var(--cornsilk);
  text-decoration: none;
}
.gallery span {
  text-align: center;
  display: block;
  font-weight: normal;
}
.gallery img {
  display: block;
  width: 100%;
  aspect-ratio: 16/9;
  font-size: 12px;
}

.mods li[data-type]::before {
  content: attr(data-type);
  display: inline-block;
  background: var(--bistre);
  font-size: 0.75rem;
  padding: 0 4px;
  border-radius: 3px;
  line-height: 20px;
  vertical-align: top;
}

